# growl-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/: clang-format.sh
src/: game.cpp  game.h  main.cpp
